--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						De kracht van oefentherapie Mensendieck is dat u inzicht krijgt in het ontstaan van uw klachten en dat u deze klachten zelf leert verhelpen en voorkomen</p>
 				</header>
 				<footer>
-					<a href="#first" class="button scrolly">Book now your appointment</a>
+					<a href="#fourth" class="button scrolly">Book now your appointment</a>
 				</footer>
 			</section>
 
@@ -67,7 +67,7 @@
 							</div>
 							<div class="col-12">
 								<footer>
-									<a href="#second" class="button scrolly">Book now your appointment</a>
+									<a href="#fourth" class="button scrolly">Book now your appointment</a>
 								</footer>
 							</div>
 						</div>
