--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 										Het verdiepen van kennis vindt Nathalie belangrijk, vandaar dat zij meerdere opleidingen gevolgd heeft. De combinatie van oefentherapie Mensendieck, fysiotherapie en manuele 
 										therapie geeft Nathalie een goede basis voor het onderzoeken en behandelen van klachten aan het houdings- en bewegingsapparaat..</p>
 									<footer>
-										<a href="#third" class="button scrolly">Book now your appointment</a>
+										<a href="#fourth" class="button scrolly">Book now your appointment</a>
 									</footer>
 								</section>
 							</div>
